# chonkie

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCS.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-app.yml  python-test-push.yml  tests.yml
benchmarks/: README.md
chonkie/: __init__.py
chonkie/chunker/: __init__.py  base.py  semantic.py  sentence.py  spdm.py  token.py  word.py
cookbook/: README.md
cookbook/tutorials/: Chonkie_RecursiveChunker_for_PDF_and_Markdown.ipynb  recursive_chunking_pdf.ipynb  🦛 Chonkie: RecursiveChunker for PDF and Markdown Chunking.ipynb
src/chonkie/: __init__.py  context.py  token_factory.py  token_processor.py  tokenizer.py  types.py
src/chonkie/chef/: __init__.py  base.py  patterns.py  text.py
src/chonkie/chunker/: __init__.py  base.py  late.py  recursive.py  sdpm.py  semantic.py  sentence.py  spdm.py  token.py  word.py
src/chonkie/cloud/: __init__.py
src/chonkie/cloud/chunker/: __init__.py  base.py  late.py  recursive.py  sdpm.py  semantic.py  sentence.py  token.py  word.py
src/chonkie/embeddings/: __init__.py  auto.py  base.py  cohere.py  model2vec.py  model2vec_embeddings.py  model_2_vec.py  openai.py  registry.py  sentence_transformer.py
src/chonkie/experimental/: token_processor.py
src/chonkie/refinery/: __init__.py  base.py  overlap.py
tests/: test_tokenizer.py  test_types.py
tests/chef/: test_base_chef.py  test_text_chef.py
tests/chunker/: test_late_chunker.py  test_recursive_chunker.py  test_sdpm_chunker.py  test_semantic_chunker.py  test_sentence_chunker.py  test_spdm_chunker.py  test_token_chunker.py  test_word_chunker.py
tests/cloud/: test_cloud_late_chunker.py  test_cloud_recursive_chunker.py  test_cloud_sdpm_chunker.py  test_cloud_semantic_chunker.py  test_cloud_sentence_chunker.py  test_cloud_token_chunker.py  test_cloud_word_chunker.py
tests/embeddings/: test_auto_embeddings.py  test_cohere_embeddings.py  test_custom_embeddings.py  test_model2vec_embeddings.py  test_openai_embeddings.py  test_sentence_transformer_embeddings.py
tests/refinery/: test_base_refinery.py  test_overlap_refinery.py
