[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chonkie"
version = "0.2.0.post1"
description = "🦛 CHONK your texts with Chonkie ✨ - The no-nonsense RAG chunking library"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["chunking", "rag", "nlp", "text-processing"]
authors = [
    {name = "Bhavnick Minhas", email = "bhavnicksm@gmail.com"}
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing :: Linguistic"
]
dependencies = [
    "autotiktokenizer>=0.2.0"
]

[project.urls]
Homepage = "https://github.com/bhavnicksm/chonkie"

[project.optional-dependencies]
semantic = ["sentence-transformers>=2.3.0", "numpy>=1.23.0"]
all = ["sentence-transformers>=2.3.0", "numpy>=1.23.0"]
dev = ["pytest>=6.2.0", 
        "datasets>=1.14.0",
        "transformers>=4.0.0",
        "black>=21.12b0",
        "isort>=5.10.2",
        "flake8>=4.0.0",
        "mypy>=0.910",
        "pylint>=2.11.1",
        "pre-commit>=2.15.0"]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["chonkie", 
            "chonkie.chunker",
            "chonkie.embeddings"]